[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AudioVisualizer"
version = "0.1.0"
description = "AudioVisualization module main"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
